fix: enforce fail-closed access control and harden encryption
- Whitelist is now fail-closed: an empty whitelist means owner-only access
  instead of open-to-all, with a startup warning (and an error when both the
  whitelist and owner ids are empty)
- Encryption fails the operation instead of silently storing plaintext when
  encryption.required=true
- Add Russian-language prompt injection heuristics
- Align pom version with CHANGELOG (0.6.0)
- Update README/DEPLOY/.env.example and record changes in CHANGELOG